[gd_scene load_steps=6 format=2]

[ext_resource path="res://PersonaButton.gd" type="Script" id=1]
[ext_resource path="res://Persona.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment() {
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV);
	COLOR = vec4(1.0 - color.r, 1.0 - color.g, 1.0 - color.b, 1.0);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[node name="Main" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1022.0
margin_bottom = 595.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 311.519
margin_top = 160.973
margin_right = 351.519
margin_bottom = 174.973
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PersonaButton" type="Polygon2D" parent="."]
material = SubResource( 2 )
position = Vector2( 183.084, 93.2729 )
scale = Vector2( 0.532286, 0.54386 )
polygon = PoolVector2Array( 213.089, 123.044, 585.869, 123.696, 586.521, 271.635, 221.561, 271.635 )
script = ExtResource( 1 )

[node name="TopLeftTween" type="Tween" parent="PersonaButton"]
repeat = true
playback/repeat = true

[node name="TopRightTween" type="Tween" parent="PersonaButton"]

[node name="BottomLeftTween" type="Tween" parent="PersonaButton"]

[node name="BottomRightTween" type="Tween" parent="PersonaButton"]

[connection signal="tween_completed" from="PersonaButton/TopLeftTween" to="PersonaButton" method="_on_AllTweens_tween_completed"]
[connection signal="tween_step" from="PersonaButton/TopLeftTween" to="PersonaButton" method="_on_AllTweens_tween_step"]
[connection signal="tween_completed" from="PersonaButton/TopRightTween" to="PersonaButton" method="_on_AllTweens_tween_completed"]
[connection signal="tween_step" from="PersonaButton/TopRightTween" to="PersonaButton" method="_on_AllTweens_tween_step"]
[connection signal="tween_completed" from="PersonaButton/BottomLeftTween" to="PersonaButton" method="_on_AllTweens_tween_completed"]
[connection signal="tween_step" from="PersonaButton/BottomLeftTween" to="PersonaButton" method="_on_AllTweens_tween_step"]
[connection signal="tween_completed" from="PersonaButton/BottomRightTween" to="PersonaButton" method="_on_AllTweens_tween_completed"]
[connection signal="tween_step" from="PersonaButton/BottomRightTween" to="PersonaButton" method="_onAllTweens_tween_step"]
